deploy: 1648c013387cf27baac4f8200cfd602f57ed0958

--- a/tutorial.html
+++ b/tutorial.html
@@ -31,7 +31,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./tutorial_QGIS_Tim.html" rel="next">
+<link href="./tutorial_Rijsenhout.html" rel="next">
 <script src="site_libs/quarto-listing/list.min.js"></script>
 <script src="site_libs/quarto-listing/quarto-listing.js"></script>
 <script src="site_libs/quarto-html/quarto.js"></script>
@@ -167,14 +167,14 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./tutorial_QGIS_Tim.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Tutorial Building Pit</span></a>
+  <a href="./tutorial_Rijsenhout.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Building Pit Rijsenhout</span></a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./tutorial_TheHague.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Tutorial The Hague building pit</span></a>
+ <span class="menu-text">Building Pit The Hague</span></a>
   </div>
 </li>
     </ul>
@@ -218,13 +218,13 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-grid" id="listing-listing">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1695195206014" data-listing-reading-time-sort="30">
-<a href="./tutorial_QGIS_Tim.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1695196049643" data-listing-reading-time-sort="30">
+<a href="./tutorial_Rijsenhout.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="figures/tutorial/GeoTOP-Verticaledoorsnede.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Tutorial Building Pit
+Building Pit Rijsenhout
 </h5>
 <div class="card-text listing-description">
 In this tutorial, you will learn how to:
@@ -238,13 +238,13 @@ In this tutorial, you will learn how to:
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1695195206014" data-listing-reading-time-sort="46">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1695196049643" data-listing-reading-time-sort="45">
 <a href="./tutorial_TheHague.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="figures/tutorial/photo-TheHagueCityCentre.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Tutorial The Hague building pit
+Building Pit The Hague
 </h5>
 <div class="card-text listing-description">
 In this tutorial, you will learn how to:
@@ -500,8 +500,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   <div class="nav-page nav-page-previous">
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./tutorial_QGIS_Tim.html" class="pagination-link">
-        <span class="nav-page-text">Tutorial Building Pit</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./tutorial_Rijsenhout.html" class="pagination-link">
+        <span class="nav-page-text">Building Pit Rijsenhout</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
