--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./tutorial.html" rel="" target="">
  <span class="menu-text">Tutorials</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./developer.html" rel="" target="">
+ <span class="menu-text">Development</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
@@ -177,7 +181,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-grid" id="listing-listing">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1702844972405" data-listing-reading-time-sort="1">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1702921245367" data-listing-reading-time-sort="1">
 <a href="./tutorial.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
