--- a/deltaforge_install.html
+++ b/deltaforge_install.html
@@ -92,6 +92,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./tutorial.html" rel="" target="">
  <span class="menu-text">Tutorials</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./developer.html" rel="" target="">
+ <span class="menu-text">Development</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
