--- a/tutorial.html
+++ b/tutorial.html
@@ -129,6 +129,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./tutorial.html" rel="" target="" aria-current="page">
  <span class="menu-text">Tutorials</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./developer.html" rel="" target="">
+ <span class="menu-text">Development</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
@@ -218,7 +222,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-grid" id="listing-listing">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1702844972405" data-listing-reading-time-sort="30">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1702921245367" data-listing-reading-time-sort="30">
 <a href="./tutorial_Rijsenhout.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="figures/tutorial/GeoTOP-Verticaledoorsnede.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -238,7 +242,7 @@ In this tutorial, you will learn how to:
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1702844972405" data-listing-reading-time-sort="45">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1702921245367" data-listing-reading-time-sort="45">
 <a href="./tutorial_TheHague.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="figures/tutorial/photo-TheHagueCityCentre.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
