--- a/tutorial_Rijsenhout.html
+++ b/tutorial_Rijsenhout.html
@@ -96,6 +96,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./tutorial.html" rel="" target="" aria-current="page">
  <span class="menu-text">Tutorials</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./developer.html" rel="" target="">
+ <span class="menu-text">Development</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
